# legal-peripherals-mcp

./: .bumpversion.cfg  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  README.md  connector_manifest.yml  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  requirements.txt  run_enhancer.py  sitemap.xml
.specify/: results.json
.specify/reports/: code_enhancement_report.md
.specify/specs/code-enhancement-20260525/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  overview.md  usage.md
drafts/: amended_operating_agreement.txt  assignment_of_membership_interest.txt  commodity_asset_pool_registry.txt  ein_ss4_draft.txt  llc_operating_agreement.txt  managing_directors_dividend_resolution.txt  sovereign_trust_indenture.txt  structure_diagram.txt  structuring_summary.json  transition_guide.txt  trust_agreement.txt
installation/: index.html
legal_peripherals_mcp/: __init__.py  agent_server.py  api_client.py  auth.py  compliance_kb.py  kg_ingest.py  kg_media.py  mcp_server.py
legal_peripherals_mcp/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
legal_peripherals_mcp/mcp/: __init__.py  mcp_compliance.py  mcp_ein.py  mcp_sos.py  mcp_statute.py
legal_peripherals_mcp/ontology/: __init__.py  certification.json  compliance.ttl  compliance_bsa_aml.ttl  compliance_cfpb.ttl  compliance_dodd_frank.ttl  compliance_flsa.ttl  compliance_hipaa.ttl  compliance_llc.ttl  compliance_occ.ttl  compliance_taxation.ttl  domain_commercial.ttl  domain_corporate.ttl  domain_employment.ttl  domain_litigation.ttl  domain_privacy.ttl  domain_regulatory.ttl  legal.ttl
legal_peripherals_mcp/ontology/fixtures/: records.json
legal_peripherals_mcp/ontology/mappings/: source.yaml
legal_peripherals_mcp/ontology/migrations/: manifest.json
legal_peripherals_mcp/ontology/shapes/: connector.shacl.ttl
legal_peripherals_mcp/prompts/: formation_specialist.json  main_agent.json
legal_peripherals_mcp/skills/legal-peripherals-compliance-watch/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-contract-escalation/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-contract-lifecycle/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-contract-review/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-dsar-response/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-ein-filing/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-employment-policy-drafting/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-entity-compliance-tracker/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-entity-lookup/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-hiring-termination-review/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-internal-investigation/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-international-expansion/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-leave-tracking/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-mcp-operations/: SKILL.md
legal_peripherals_mcp/skills/legal-peripherals-mcp-operations/agents/: openai.yaml
legal_peripherals_mcp/skills/legal-peripherals-mcp-operations/references/: catalog.md
legal_peripherals_mcp/skills/legal-peripherals-policy-redraft/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-privacy-agreement-review/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-privacy-gap-monitor/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-privacy-impact-assessment/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-regulatory-feed-watch/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-regulatory-gap-tracker/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-starter/: SKILL.md
legal_peripherals_mcp/skills/legal-peripherals-statute-lookup/: SKILL.md  WORKFLOW.md
legal_peripherals_mcp/skills/legal-peripherals-worker-classification/: SKILL.md  WORKFLOW.md
overview/: index.html
scripts/: interactive_structuring.py
search/: search_index.json
tests/: conftest.py  test_api_client.py  test_compliance_kb.py  test_compliance_ontology.py  test_concept_parity.py  test_domain_ontologies.py  test_init_dynamics.py  test_kg_ingest.py  test_kg_media.py  test_mcp_ein.py  test_mcp_server.py  test_mcp_sos.py  test_mcp_statute.py  test_skills_catalog.py  test_startup.py
usage/: index.html
