[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "legal-peripherals-mcp"
version = "1.1.0"
description = "Legal Peripherals MCP Server for Secretary of State, EIN, and Statutes automation!"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11, <3.15"
dependencies = [
    "agent-utilities>=1.0.0",
    "playwright>=1.40.0",
]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.0.0", ]
agent = [ "agent-utilities[agent,logfire]>=1.0.0", ]
# Local rdflib-backed compliance-ontology lookup (legal_compliance_lookup tool /
# compliance_kb.py). Kept out of core `dependencies` and out of the slim `mcp`
# image per the fleet's owl-extra discipline (agent-utilities' dependency
# discipline: rdflib/owlready2/pyshacl are a last-resort Python fallback, import-lazy, never
# on the lean serving plane); the engine's native RDF/SPARQL surface is the
# primary path. Without it the tool degrades honestly instead of crashing.
ontology = [ "rdflib>=7.6.0", ]
all = [ "agent-utilities[mcp,agent,logfire]>=1.0.0", "rdflib>=7.6.0", ]
test = [ "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov", "rdflib>=7.6.0", ]

[project.scripts]
legal-peripherals-mcp = "legal_peripherals_mcp.mcp_server:mcp_server"
legal-peripherals-agent = "legal_peripherals_mcp.agent_server:agent_server"

[project.entry-points."agent_utilities.skill_providers"]
legal-peripherals-mcp = "legal_peripherals_mcp.skills"

[project.entry-points."agent_utilities.prompt_providers"]
legal-peripherals-mcp = "legal_peripherals_mcp.prompts"

# CONCEPT:AU-KG.ontology.package-federation-migration — federate this package's OWL/RDF ontology module into the
# agent-utilities hub (legal). Resolved via iter_provider_dirs like the
# skill/prompt providers; the hub globs every *.ttl in the dir.
[project.entry-points."agent_utilities.ontology_providers"]
legal-peripherals-mcp = "legal_peripherals_mcp.ontology"

# CONCEPT:AU-KG.ingest.mcp-tool-connector — Tier-1 declarative source presets so
# the KG can sync this package's records with no agent-utilities code. Resolved via
# iter_provider_dirs; the hub globs connectors/mcp_source_presets.json.
[project.entry-points."agent_utilities.source_connector_providers"]
legal-peripherals-mcp = "legal_peripherals_mcp.connectors"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [ "pytest-timeout>=2.4.0", ]

[tool.setuptools.package-data]
legal_peripherals_mcp = [ "mcp_config.json", "agent_data/**", "prompts/**", "skills/**", "ontology/**", "connectors/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B", ]
ignore = [ "E402", "E501", "B008", ]

[tool.setuptools.packages.find]
where = [ ".", ]
